--- a/src/app/cms-lib/footer-navigation/footer-navigation.component.scss
+++ b/src/app/cms-lib/footer-navigation/footer-navigation.component.scss
@@ -8,7 +8,7 @@
   $footer-nav-md-trbl-margin: 0 0 47px 0 !default;
   $footer-nav-xs-container-border-top: 1px solid theme-color(inverse) !default;
   $footer-nav-xs-container-trbl-padding: 0 0 24px 0 !default;
-  $footer-nav-title-font-case: uppercase !default;
+  $footer-nav-title-font-case: capitalize !default;
   $footer-nav-title-trbl-margin: 0 0 12px 0 !default;
   $footer-nav-title-xs-text-align: center !default;
   $footer-nav-list-trbl-padding: 0 !default;
@@ -20,7 +20,7 @@
   $footer-nav-social-sm-trbl-padding: 30px 0 0 0 !default;
   $footer-nav-social-sm-text-align: center !default;
   $footer-nav-social-xs-trbl-margin: 0 !default;
-  $footer-nav-social-title-font-case: uppercase !default;
+  $footer-nav-social-title-font-case: capitalize !default;
   $footer-nav-social-list-trbl-padding: 0 !default;
   $footer-nav-social-item-trbl-margin: 0 ($spacer * 0.25) ($spacer * 0.25) 0 !default;
   $footer-nav-notice-trbl-padding: 33px 0 32px 0 !default;
