--- a/src/scss/ybase/_variables.scss
+++ b/src/scss/ybase/_variables.scss
@@ -1,15 +1,18 @@
-@import "~bootstrap/scss/variables";
+@import '~bootstrap/scss/variables';
 
 $font-weight-semi: 600 !default;
-$btn-text-transform: uppercase !default;
+$btn-text-transform: capitalize !default;
 
 //set defaults for type size and weights
 $type: () !default;
-$type: map-merge((
-  "1": $h1-font-size $headings-font-weight,
-  "2": $h2-font-size $headings-font-weight,
-  "3": $h3-font-size $headings-font-weight,
-  "4": $h4-font-size $headings-font-weight,
-  "5": $h5-font-size $headings-font-weight,
-  "6": $h6-font-size $headings-font-weight,
-), $type);
+$type: map-merge(
+  (
+    '1': $h1-font-size $headings-font-weight,
+    '2': $h2-font-size $headings-font-weight,
+    '3': $h3-font-size $headings-font-weight,
+    '4': $h4-font-size $headings-font-weight,
+    '5': $h5-font-size $headings-font-weight,
+    '6': $h6-font-size $headings-font-weight
+  ),
+  $type
+);
